# steam-workshop-scraper

./: .gitignore  README.md  TODO.md  config.yaml.example  database_schema.md  pyproject.toml  pytest.ini  run_tests.py  test_api_sorting.py  tui_state.yaml
docs/: code-issues.md  config-security.md  cross-platform.md  data-pipeline.md  schema-migrations.md  search-filter.md  threading.md  tui.md  web-ui.md
reference/: checklist.md  python.beautifulsoup4.html  python.requests.html  research.html
reference/python-3.12-docs-text/: contents.txt  glossary.txt  license.txt
reference/python-3.12-docs-text/c-api/: arg.txt  call.txt  code.txt  complex.txt  dict.txt  frame.txt  (+22 more)
src/: analysis.py  config.py  daemon.py  daemon_runner.py  database.py  image_worker.py  scraper.py  steam_api.py  translator.py  tui.py  web_runner.py  web_scraper.py  web_worker.py  webserver.py
templates/: index.html
tests/: conftest.py  test_analysis.py  test_api_reachability.py  test_config.py  test_daemon.py  test_daemon_discovery_limit.py  test_daemon_error_recovery.py  test_daemon_runner.py  test_database.py  test_database_advanced.py  test_database_performance.py  test_filters.py  test_integration.py  test_search_builder.py  test_steam_api.py  test_system_e2e.py  test_tags.py  test_translator.py  test_tui.py  test_tui_accessibility.py  test_tui_main.py  test_tui_markup.py  test_tui_random_filters.py  test_tui_state.py  test_tui_subscriptions.py  test_unicode_fuzz.py  test_web_scraper.py  test_web_scraper_live.py  test_webserver.py  test_wilson.py
userscripts/: steam_subscribe.user.js
(+41 files in other folders)
