[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-workshop-scraper"
version = "0.1.0"
description = "A background daemon and TUI for scraping and querying Steam Workshop data."
authors = [
    {name = "Myrddin", email = "myrddin@example.com"},
]
dependencies = [
    "requests",
    "requests-html",
    "pyyaml",
    "textual",
    "lxml_html_clean",
    "openai",
    "flask",
    "puremagic",
    "waitress"
]

[project.scripts]
workshop-daemon = "src.daemon_runner:main"
workshop-tui = "src.tui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
